Fix ToolbarButton InkDrop inset positioning in RTL

Fixes InkDrop clipping for non-centered (edge) ToolbarButtons when
rendered in RTL (when rendered flipped).

Bug: chromium:856510
Change-Id: Ie83bfc3b1fd1e8815dae25beeb83f86d89c375c4
Reviewed-on: https://chromium-review.googlesource.com/1115964
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570595}
Former-commit-id: 276e131f4b57cc7e89fedf662d9ef09b53a1a898